Fixed menu on tablets

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ form {
     border-radius: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     #mainNavbar {
         border: none;
     }
